--- a/src/docs/asciidoc/util/definitions.adoc
+++ b/src/docs/asciidoc/util/definitions.adoc
@@ -11,6 +11,7 @@
 
 :beforeMark: pass:normal[ `@BeforeMark` ]
 :container:  pass:normal[ `@Container` ]
+:dependent: pass:normal[ `@Dependent` ]
 :e1container: pass:normal[ `@E1Container` ]
 :e1immutable: pass:normal[ `@E1Immutable` ]
 :e2container: pass:normal[ `@E2Container` ]
